Taxonomy manager CSS layout bug fix.

--- a/web/sites/all/modules/taxonomy_manager/css/taxonomy_manager.css
+++ b/web/sites/all/modules/taxonomy_manager/css/taxonomy_manager.css
@@ -586,3 +586,7 @@ span.taxonomy-manager-message-close {
 #taxonomy-manager-tree-outer-div, #taxonomy2-manager-tree-outer-div {
   padding-bottom: 5em;
 }
+
+#taxonomy-term-data {
+  margin-bottom: 20em;
+}
